--- a/exercises/1_ex_python.ipynb
+++ b/exercises/1_ex_python.ipynb
@@ -34,7 +34,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 3\n",
+    "b=4.5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,10 +48,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mHumboldt-WI\\bads\\exercises\\1_ex_python.ipynb Cell 7\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell://github/Humboldt-WI/bads/exercises/1_ex_python.ipynb#W6sdnNjb2RlLXZmcw%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mtype\u001b[39m(a)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "type(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,7 +79,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "isinstance(b,str)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,7 +95,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a ^ 2 + (1/b) * (a * b)^0.5 "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,11 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code to create variables A, B, and y\n"
+    "A =[[1,2,3],[4,5,6],[7,8,10]]\n",
+    "B =[[1,4,7], [2,5,8], [3,6,9]]\n",
+    "y = (1,2,3)"
    ]
   },
   {
@@ -417,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
